--- a/LunchTime/package.json
+++ b/LunchTime/package.json
@@ -13,10 +13,13 @@
     "express": "^4.16.4",
     "mysql2": "^1.6.5",
     "mysqli": "^3.0.6",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.5.1",
-    "sequelize": "^4.43.0"
+    "sequelize": "^4.43.0",
+    "prop-types": "latest",
+    "@expo/vector-icons": "latest"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
