--- a/LunchTime/package.json
+++ b/LunchTime/package.json
@@ -25,7 +25,8 @@
     "react-native-stars": "^1.1.5",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
-    "sequelize": "^4.43.0"
+    "sequelize": "^4.43.0",
+    "socket.io-client": "latest"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
